Dropped proxy and next-auth-utils. Now using cookies to store tokens. TODO: implement auth state with pinia
