# gapi/metadata.go
@@ -2,20 +2,33 @@ package gapi
 
 import (
 	"context"
+	"net/http"
+	"strings"
 
 	"google.golang.org/grpc/metadata"
 	"google.golang.org/grpc/peer"
 )
 
 type Metadata struct {
-	UserAgent string
-	ClientIP  string
+	UserAgent    string
+	ClientIP     string
+	AccessToken  string
+	RefreshToken string
 }
 
+type httpContextKey string
+
 const (
-	grpcGatewayUserAgentHeader = "grpcgateway-user-agent"
-	userAgentHeader            = "user-agent"
-	xForwardedForHeader        = "x-forwarded-for"
+	grpcGatewayUserAgentHeader                = "grpcgateway-user-agent"
+	userAgentHeader                           = "user-agent"
+	xForwardedForHeader                       = "x-forwarded-for"
+	ResponseWriterKey          httpContextKey = "http-response-writer"
+	cookie                                    = "grpcgateway-cookie"
+)
+
+const (
+	cookieAccessToken  = "access_token"
+	cookieRefreshToken = "refresh_token"
 )
 
 func (server *Server) getMetadata(ctx context.Context) *Metadata {
@@ -33,6 +46,12 @@ func (server *Server) getMetadata(ctx context.Context) *Metadata {
 		if clientIPs := metadataFromContext.Get(xForwardedForHeader); len(clientIPs) > 0 {
 			md.ClientIP = clientIPs[0]
 		}
+
+		if cookies := metadataFromContext.Get(cookie); len(cookies) > 0 {
+			parsed := parseCookieHeader(cookies[0])
+			md.AccessToken = "bearer " + parsed[cookieAccessToken]
+			md.RefreshToken = "bearer " + parsed[cookieRefreshToken]
+		}
 	}
 
 	if p, ok := peer.FromContext(ctx); ok {
@@ -41,4 +60,22 @@ func (server *Server) getMetadata(ctx context.Context) *Metadata {
 
 	return md
 
+}
+
+func GetResponseWriter(ctx context.Context) (http.ResponseWriter, bool) {
+	rw, ok := ctx.Value(ResponseWriterKey).(http.ResponseWriter)
+	return rw, ok
+}
+
+func parseCookieHeader(header string) map[string]string {
+	result := make(map[string]string)
+
+	cookiePairs := strings.Split(header, ";")
+	for _, pair := range cookiePairs {
+		kv := strings.SplitN(strings.TrimSpace(pair), "=", 2)
+		if len(kv) == 2 {
+			result[kv[0]] = kv[1]
+		}
+	}
+	return result
 }
